Started working on a basic theme in css

--- a/css/global.css
+++ b/css/global.css
@@ -1,1 +1,4 @@
 /* This file will hold the main styles for your website. */
+body { font-family: Arial, Helvetica, sans-serif;}
+h1, h2, h3, h4, h5, h6 { font-family: "Arial Black", Gadget, sans-serif; font-weight: 900; }
+img, input, textarea { max-width: 100%; }
