--- a/css/muse-alpha-default-narrow.css
+++ b/css/muse-alpha-default-narrow.css
@@ -1,1 +1,2 @@
 /* This file will hold styles that are loaded using the same media query as the narrow grid. */
+#page-wrapper-inner { width: 730px; }
