--- a/css/muse-alpha-default-normal.css
+++ b/css/muse-alpha-default-normal.css
@@ -1,1 +1,2 @@
 /* This file will hold styles that are loaded using the same media query as the normal grid. */
+#page-wrapper-inner { width: 970px; }
